# Iosh__AdEngine

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md
media/: index.html
microservices/ad_engine/: .env.example  Cargo.toml  Readme.md  Rustfmt.toml
microservices/ad_engine/.sqlx/: query-0bbcb506202636113bf648688b3a772ae1d0d22e12e4ea5387860fb0115374ca.json  query-30918989c1652ad99fc4d2b2925d3641b98dc01ec47db408918d59d51f71d55a.json  query-341b13c8550b8089c00ba701e6c5762ced7b7024217a8b7a897372e760beec41.json  query-5387d405aec72ff77436920e8b5c49bde41a25a56f1f0e9ec1d87c482343f7d5.json  query-5fc329cf565be5097e099e28e212710f83d653d6b403863cafe8071b59e95e62.json  query-6c538195744ecb0ebfffc9d123d8b2931efa2266f19ef4a73d0f9830f2685d41.json  query-87b099d987f4bf23c061e064387a53de312db23d6d6e1210fe74c5dbc598d146.json  query-b5251eca1dd7b50fc12effe69b2b81e34153867d7d19afc2afa51fb1b8f5ba3e.json  query-c19e0c4e5f9a99f40c988e2b21e0c431deb99f48a41a8f7840944676a9eba1cb.json
microservices/ad_engine/conf/: base.yaml  local.yaml  prod.yaml
microservices/ad_engine/docker/: .dockerignore  Dockerfile
microservices/ad_engine/migrations/: 20250212120632_create_client_and_advertisers.down.sql  20250212120632_create_client_and_advertisers.up.sql  20250213092525_create_campaigns.down.sql  20250213092525_create_campaigns.up.sql  20250214105850_create_stat_for_campaign.up.sql  20250217070019_add_obscene_words.up.sql  20250217100115_add_image.up.sql
microservices/ad_engine/src/: lib.rs  main.rs
microservices/ad_engine/src/interface/: mod.rs
solution/microservices/ad_engine/: .gitignore  Cargo.toml  Clippy.toml  Readme.md
solution/microservices/ad_engine/.sqlx/: query-03d2933582e123239b2cb5b57988da38e685444403c50235d211e03c940c8581.json  query-0a9dd3876eae7263d32fc22823fc3b380806d1863f924dd9c08182247b3558e9.json  query-0b53a9470d6eaf57810ddd3ccbec9d5087d9bf7128d8eccb69281f819239910d.json  query-0daadec77023d2d74857614520e0afd342856e2eb5962795c7ac039815ad3ab8.json  query-0f9790b05241957c993d9d55d4c66fc7b7fa3c828267b19bc40fed7d6aea5efb.json  query-22b85309c585a959656611d948c00d451e0edd22c45e32f17f5c7bf8e5504812.json  query-386935726b3186bcc0e3c120b54b0a97890249c49eade0d58c3a2eaca20be1f0.json  query-3bd66b9136d09a0a18d010bda45e00a728754cab23d112c932a2649151914417.json  query-3ce3854cee4ab70c7d0002af12326eb147cbdf9996bc92038f1e0ece292afcaf.json  query-46b3de8f58ba1b4399067f7758f2c928a7bbf0f46e2c374cec16628eba299b3a.json  query-48c0fbffcf8a9bc71db254bdb897e23e9cb67f5846e92c88d5f97aa157ea3c63.json  query-51df6870e3f633b242d1cc3b1cad730db1917e50fc295206cbe1d92d6e5fa989.json  query-58cb941b1c4c77870e6459dc907ce77ce422290813e477996febfe2336a4782c.json  query-5b7b53fdbba8473357f3ba3d0cbd784cff2b5a03a03a16bc369d869356abdbea.json  query-66a0e5e286292c655fdb0f17549bd393659515a830a3f1f57b1b1abe8e48e169.json  query-67444ed14882eea5fd6b302130fd18b8cd9c7bb9f95d070f977bc952eab20b54.json  query-6bf2cf61939e78c43c69ee173cb3dafc055716248ae11a755afb59d361a0b16a.json  query-71b07b219f9d7d180b4e9d0c9bed61d15525f1ae58500e46bb4818d5cbfe3375.json  query-72e139eb828712a6cd723dfe9e11439fc300087f424f31a9baab7006bf644141.json  query-7e501f10cc33f627f213f7e300e9db637525c153c55550073d7bca0c70b7011d.json  query-87b099d987f4bf23c061e064387a53de312db23d6d6e1210fe74c5dbc598d146.json  query-b5251eca1dd7b50fc12effe69b2b81e34153867d7d19afc2afa51fb1b8f5ba3e.json  query-c281858de3afc71d4955a4c5ecd54b71c907bfbe81c02152dd62714755605e4a.json  query-d7361dd67ce023cdd28142cbed825a48ade746d86c2ee98c17da902588a57ba1.json  query-d9ae360e9cc1ba278e5c8142405ed9b4cccab1aed77d9a4946b696e0830340dd.json  query-e37cb2bb910a146f25035aeecd601e9ff96d9cf8952218712f947d967e62e532.json  query-e6414d615d5d9f2254ce3a0745ba3f807f3acf60e07ee4a2d3cf1122c900c367.json  query-ebdeebf79320645e492edc1903d27551252a9407aa55436dbddd277075e2518b.json  query-ee64e6fe8d60032e699c03118d8fd8dd360adeae6403eb258485167907cb05c3.json  query-f1c75626c3298f8d4a0fb2034ced94671e07288a513bbf34a023a993ab49dcfc.json  query-f2dabe743d36729410e077f9c1b07690a868703e00f6297ba298fe2dc32fb9fa.json  query-fe009028ced037c0ec0214b0d8b8608874f9e54c84b6c1bdb2b979c63f4b79ca.json  query-ff36e3fa89d246cd87e1ee6cebd0f95ef09c47de3f37f2e77c46b499bee76b47.json
solution/microservices/ad_engine/conf/: base.yaml  local.yaml
solution/microservices/ad_engine/docker/: Dockerfile
solution/microservices/ad_engine/migrations/: 20250107153424_init.down.sql  20250107153424_init.up.sql  20250212120632_create_client_and_advertisers.down.sql  20250212120632_create_client_and_advertisers.up.sql  20250213092525_create_campaigns.down.sql  20250213092525_create_campaigns.up.sql  20250214105850_create_stat_for_campaign.down.sql  20250214105850_create_stat_for_campaign.up.sql  20250217070019_add_obscene_words.down.sql  (+3 more)
solution/microservices/moderator_ai/: pyproject.toml
solution/microservices/telegram_bot/: main.py  pyproject.toml
(+302 files in other folders)
