[package]
name = "ad-engine"
version = "0.1.0"
edition = "2021"
repository = "https://gitlab.prodcontest.ru/2025-final-projects-back/IOSHED"
authors = [
    "Ivenin Valentin <iveninvala7@gmail.com>",
]
description = """
    Your task is to develop an advertising engine that will show users the most suitable ads,
    take into account partner requests and at the same time bring maximum profit to your startup.
"""


[lib]
path = "src/lib.rs"


[profile.coverage]
inherits = "release"
debug = true


[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.84"
futures = "0.3.31"
rayon = "1.5"
futures-util = "0.3"

# Http
actix-web = "4"
actix-multipart = "0.7.2"
actix-cors = "0.7.0"
reqwest = { version = "0.12.2", features = ["json"] }

# Logger
tracing = "0.1"
tracing-actix-web = "0.7.15"
tracing-subscriber = { version="0.3", features = ["registry", "env-filter"] }

# Time and date
chrono = { version = "0.4.19", features = ["serde"]}

# Configurate
config = "0.15"
dotenv = "0.15"

# Serialize and deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
rmp-serde = "1.3.0"

# Validating
validator = { version = "0.16.1", features = ["derive"] }
regex = "1.5.6"

# Lazy init
lazy_static = "1.4.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid", "bigdecimal"] }
redis = { version = "0.29.1", features = ["r2d2"]}
r2d2 = "0.8.10"

# Error
thiserror = "2.0.9"

# Docs
utoipa = { version = "5", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version="9", features = ["actix-web", "debug-embed"] }

# Types
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
bigdecimal = "0.4.7"
anyhow = "1.0.95"

# Metrics
prometheus = "0.13.4"

[dev-dependencies]
mockall = "0.13.1"
