[project]
name = "moderator-ai"
version = "0.1.0"
description = "Your task is to develop an advertising engine with moderator ai that will show users the most suitable ads."
authors = [
    {name = "IOSHED", email = "iveninvala7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
