[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Your task is to develop an advertising engine with tg that will show users the most suitable ads."
authors = ["IOSHED <iveninvala7@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.12"
aiogram-dialog = "^2.3.1"
pydantic-settings = "^2.7.1"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
httpx = "^0.28.1"
aiohttp = "^3.11.12"
aio-pika = "^9.5.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
